Set base partial up.

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deciphr</title>
-</head>
-<body>
+{% extends 'base.html' %} {% block content %}
+
+
     <h1>About Deciphr</h1>
     <br />
-    <p>On this app, you may submit the title of a song and the name of the artist, and then wait for a knowledgeable person or perhaps even the musician themselves to respond!</p>
-    <footer>All Rights Reserved, &copy; 2022 Deciphr</footer>
-</body>
-</html>
+    <p>On this app, you may enter the title of a song whose lyrics you don't know as well as the artist's name. Then watch for an informed person to answer or possibly even the artist themselves!</p>
+
+{% endblock %}
