--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,6 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
   </head>
   <body>
     <header class="navbar-fixed">
@@ -16,7 +19,7 @@
         <div class="nav-wrapper">
           <ul>
             <li>
-              <a href="/" class="left brand-logo">  CatCollector</a>
+              <a href="/" class="left brand-logo">Decipher</a>
             </li>
           </ul>
           <ul class="right">
@@ -28,7 +31,7 @@
     <main class="container">{% block content %} {% endblock %}</main>
     <footer class="page-footer">
       <div class="right">
-        All Rights Reserved, © 2019 Deciphr 
+        All Rights Reserved, © 2022 Deciphr 
       </div>
     </footer>
   </body>
