Set font to Merriweather Sans by Google Fonts.

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -3,6 +3,7 @@ body {
     min-height: 100vh;
     flex-direction: column;
     /* background-color: #3E92CC; */
+    font-family: 'Merriweather Sans', sans-serif;
     background-color: #2A628F;
 }
   
