--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -27,6 +27,7 @@
           </ul>
           <ul class="right">
             <li><a href="/about">About</a></li>
+            <li><a href="/songs">My Songs</a></li>
           </ul>
         </div>
       </nav>
