--- a/main_app/templates/songs/index.html
+++ b/main_app/templates/songs/index.html
@@ -4,11 +4,13 @@
 
 {% for song in songs %}
 <div class="card">
-  <div class="card-content">
-    <span class="card-title">{{ song.name }}</span>
-    <p>{{ song.song_name }} by {{ song.artist_name}}</p>
-    <p>Possible Lyrics: {{ song.attempted_lyrics}}</p>
-    <p>UPVOTES: {{ song.upvotes }}</p>
-  </div>
+  <a href="{% url 'detail' song.id %}">
+    <div class="card-content">
+      <span class="card-title">{{ song.name }}</span>
+      <p>{{ song.song_name }} by {{ song.artist_name}}</p>
+      <p>Possible Lyrics: {{ song.attempted_lyrics}}</p>
+      <p>UPVOTES: {{ song.upvotes }}</p>
+    </div>
+  </a>
 </div>
 {% endfor %} {% endblock %}
