Stub up the edit and delete paths and buttons.

--- a/main_app/templates/songs/detail.html
+++ b/main_app/templates/songs/detail.html
@@ -14,6 +14,10 @@
     <p>No One Cares About This Song</p>
     {% endif %}
   </div>
+  <div class="card-action">
+    <a href="{% url 'songs_update' song.id %}">Edit</a>
+    <a href="{% url 'songs_delete' song.id %}">Delete</a>
+  </div>
 </div>
 
 {% endblock %}
