--- a/main_app/templates/songs/index.html
+++ b/main_app/templates/songs/index.html
@@ -8,7 +8,7 @@
     <div class="card-content">
       <span class="card-title">{{ song.name }}</span>
       <p>{{ song.song_name }} by {{ song.artist_name}}</p>
-      <p>Possible Lyrics: {{ song.attempted_lyrics}}</p>
+      <p>From: {{ song.album_name}}</p>
       <p>UPVOTES: {{ song.upvotes }}</p>
     </div>
   </a>
