Update the UI for About and My Songs routes.

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -26,9 +26,9 @@
             </li>
           </ul>
           <ul class="right">
-            <li><a href="/about">About</a></li>
+            <li><a href="{% url 'about' %}">About</a></li>
             <li><a href="{% url 'songs_create' %}">Add A Song</a></li>
-            <li><a href="/songs">My Songs</a></li>
+            <li><a href="{% url 'index' %}">My Songs</a></li>
           </ul>
         </div>
       </nav>
