--- a/main_app/templates/main_app/song_form.html
+++ b/main_app/templates/main_app/song_form.html
@@ -3,7 +3,7 @@
 {% if object %}
 <h1>Edit <span class="teal-text">{{object.name}}</span></h1>
 {% else %}
-<h1>Add Cat</h1>
+<h1>Add A Song</h1>
 {% endif %}
 <!-- Leaving the action empty makes the form post to the same url used to display it -->
 <form action="" method="post">
@@ -13,6 +13,10 @@
     <!-- Render the inputs inside of <tr>s & <td>s -->
     {{ form.as_table }}
   </table>
-  <input type="submit" value="Submit Song!" class="btn" />
+  {% if object %}
+    <input type="submit" value="Update!" class="btn" />
+    {% else %}
+    <input type="submit" value="Submit Song!" class="btn" />
+    {% endif %}
 </form>
 {% endblock %}
