Set up file structure for playlists.

--- a/main_app/templates/songs/detail.html
+++ b/main_app/templates/songs/detail.html
@@ -5,13 +5,13 @@
 <div class="card">
   <div class="card-content">
     <span class="card-title">{{ song.song_name }}</span>
-    <p>{{ song.song_name }} by {{ song.artist_name }}</p>
+    <p>By {{ song.artist_name }}</p>
     <p>Possible Lyrics: {{ song.attempted_lyrics }}</p>
     <a href={{song.song_link}}></a>
     {% if song.upvotes > 0 %}
     <p>Upvotes: {{ song.upvotes }}</p>
     {% else %}
-    <p>No One Cares About This Song</p>
+    <p>No One Cares About This Song... Yet.</p>
     {% endif %}
   </div>
   <div class="card-action">
