--- a/main_app/templates/songs/detail.html
+++ b/main_app/templates/songs/detail.html
@@ -18,6 +18,29 @@
     <a href="{% url 'songs_update' song.id %}">Edit</a>
     <a href="{% url 'songs_delete' song.id %}">Delete</a>
   </div>
+  <br/>
+  {% comment %} The form goes here {% endcomment %}
+  <form method="post">
+    {% csrf_token %} {{ feeding_form.as_p }}
+    <input type="submit" class="btn" value="Add Feeding" />
+  </form>
+
+  {% comment %} Below the comments will render {% endcomment %}
+  <div class="card-action comments">
+    <h4>Comments</h4>
+    {% if comments %}
+    {% for comment in song.comment.all %}
+    <div class="card">
+      <div class="card-content">
+        <h5>{{comment.song_comment}}</h5>
+        <p>Created at {{comment.created}}</p>
+      </div>
+    </div>
+    {% endfor %}
+    {% else %}
+    <p>No comments yet.</p>
+    {% endif %}
+  </div>
 </div>
 
 {% endblock %}
