Set genre url and view for template.

--- a/main_app/templates/songs/detail.html
+++ b/main_app/templates/songs/detail.html
@@ -7,12 +7,12 @@
     <span class="card-title">{{ song.song_name }}</span>
     <p>By {{ song.artist_name }}</p>
     <p>Possible Lyrics: {{ song.attempted_lyrics }}</p>
-    {% comment %} {% if song.genre %}
+    {% if song.genre %}
     <p>Genre: {{ genre.genre_name }}</p>
     {% else %}
     <p>No Genre Chose</p>
     {% endif %}
-    <a href={{song.song_link}}></a> {% endcomment %}
+    <a href={{song.song_link}}></a>
     {% if song.upvotes > 0 %}
     <p>Upvotes: {{ song.upvotes }}</p>
     {% else %}
@@ -24,6 +24,11 @@
     <a href="{% url 'songs_delete' song.id %}">Delete</a>
   </div>
   <br/>
+  {% comment %} The genre form goes here {% endcomment %}
+  <form action="{% url 'add_genre' song.id %}" method="post">
+    {% csrf_token %} {{ genre_form.as_p }}
+    <input type="submit" class="btn" value="Add Genre" />
+  </form>
   {% comment %} The form goes here {% endcomment %}
   <form action="{% url 'add_comment' song.id %}" method="post">
     {% csrf_token %} {{ comment_form.as_p }}
@@ -51,7 +56,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for genre in song.genre.all %}
+      {% for genre in song.genre_set.all %}
         <td>{{genre.get_genre_display}}</td>
       </tr>
       {% endfor %}
