--- a/main_app/templates/songs/detail.html
+++ b/main_app/templates/songs/detail.html
@@ -24,12 +24,12 @@
     <a href="{% url 'songs_delete' song.id %}">Delete</a>
   </div>
   <br/>
-  {% comment %} The genre form goes here {% endcomment %}
-  <form action="{% url 'add_genre' song.id %}" method="post">
+  {% comment %} The GENRE form goes here {% endcomment %}
+  <form action="{% url 'add_genre' song.id %}" id="id_genre" method="post">
     {% csrf_token %} {{ genre_form.as_p }}
-    <input type="submit" class="btn" value="Add Genre" />
+    <input type="submit" class="btn" id="id_genre" value="Add Genre" />
   </form>
-  {% comment %} The form goes here {% endcomment %}
+  {% comment %} The COMMENT form goes here {% endcomment %}
   <form action="{% url 'add_comment' song.id %}" method="post">
     {% csrf_token %} {{ comment_form.as_p }}
     <input type="submit" class="btn" value="Add Comment" />
@@ -57,11 +57,16 @@
     </thead>
     <tbody>
       {% for genre in song.genre_set.all %}
-        <td>{{genre.get_genre_display}}</td>
+        <td>{{genre}}</td>
       </tr>
       {% endfor %}
     </tbody>
   </table>
 </div>
 </div>
+
+<script>
+  let selectEl = document.getElementById('id_genre')
+  M.FormSelect.init(selectEl)
+</script>
 {% endblock %}
