--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -28,8 +28,13 @@
           </ul>
           <ul class="right">
             <li><a href="{% url 'about' %}">About</a></li>
+            {% if user.is_authenticated %}
             <li><a href="{% url 'songs_create' %}">Add A Song</a></li>
             <li><a href="{% url 'index' %}">My Songs</a></li>
+            <li><a href="{% url 'logout' %}">Log Out</a></li>
+            {% else %}
+            <li><a href="{% url 'login' %}">Log In</a></li>
+            {% endif %}
           </ul>
         </div>
       </nav>
