Create comments with user id assigne as current user's id.

--- a/main_app/templates/songs/detail.html
+++ b/main_app/templates/songs/detail.html
@@ -52,7 +52,7 @@
     <div class="card">
       <div class="card-content">
         <h6>{{comment.song_comment}}</h6>
-        <p>Posted at {{comment.created}}</p>
+        <p>Posted at {{comment.created}} by {{comment.user}}</p>
       </div>
     </div>
     {% endfor %}
