--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -33,6 +33,7 @@
             <li><a href="{% url 'index' %}">My Songs</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
             {% else %}
+            <li><a href="{% url 'signup' %}">Sign Up</a></li>
             <li><a href="{% url 'login' %}">Log In</a></li>
             {% endif %}
           </ul>
